--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.min.css">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png">
@@ -106,7 +106,7 @@
           </li>
           <li class="progress__item progress__item--timer">
             <p class="progress__discription">
-              Уже через месяц наслаждайтесь изменениями к лучшему вашего
+              Уже через месяц наслаждайтесь изменениями к лучшему <br class="br-tablet"> вашего
               питомца!
             </p>
           </li>
@@ -126,11 +126,11 @@
           <div class="result__block-wrapper">
             <div class="result__block">
               <p class="result__data">5 КГ</p>
-              <p class="result__indicators">снижение <br> веса</p>
+              <p class="result__indicators">снижение <br class="br-mob"> веса</p>
             </div>
             <div class="result__block">
               <p class="result__data result__data--days">60 ДНЕЙ</p>
-              <p class="result__indicators">затрачено <br> времени</p>
+              <p class="result__indicators">затрачено <br class="br-mob"> времени</p>
             </div>
             <p class="result__total">
               Затраты на питание:<span class="result__total-money">15 000 РУБ.</span>
