--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,8 @@
   <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="preload" href="fonts/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
 </head>
 
 <body class="page">
@@ -59,7 +61,7 @@
             srcset="img/main-can/index-can-mobile@2x.png 2x" width="280" height="270"
             alt="Натуральный продукт Cat Energy" />
         </picture>
-        <a class="cover__button button" href="#">подобрать программу</a>
+        <a class="cover__button button" href="form.html">подобрать программу</a>
       </div>
     </section>
     <section class="advantages container">
@@ -71,7 +73,7 @@
           деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
           сбросить лишний вес
         </p>
-        <a class="advantages__button" href="#">каталог slim</a>
+        <a class="advantages__button" href="form.html">каталог slim</a>
       </div>
       <div class="advantages__wrapper advantages__wrapper--mass">
         <h3 class="advantages__title advantages__title--mass">набор массы</h3>
@@ -79,7 +81,7 @@
           Заработать авторитет среди дворовых котов и даже собак? Серия Cat
           Energy Pro поможет вашему коту нарастить необходимые мышцы!
         </p>
-        <a class="advantages__button" href="#">каталог pro</a>
+        <a class="advantages__button" href="form.html">каталог pro</a>
       </div>
     </section>
     <section class="progress container">
@@ -106,7 +108,7 @@
           </li>
           <li class="progress__item progress__item--timer">
             <p class="progress__discription">
-              Уже через месяц наслаждайтесь изменениями к лучшему <br class="br-tablet"> вашего
+              Уже через месяц наслаждайтесь изменениями к лучшему <br class="progress__br-tablet"> вашего
               питомца!
             </p>
           </li>
@@ -126,11 +128,11 @@
           <div class="result__block-wrapper">
             <div class="result__block">
               <p class="result__data">5 КГ</p>
-              <p class="result__indicators">снижение <br class="br-mob"> веса</p>
+              <p class="result__indicators">снижение <br class="result__br-mob"> веса</p>
             </div>
             <div class="result__block">
               <p class="result__data result__data--days">60 ДНЕЙ</p>
-              <p class="result__indicators">затрачено <br class="br-mob"> времени</p>
+              <p class="result__indicators">затрачено <br class="result__br-mob"> времени</p>
             </div>
             <p class="result__total">
               Затраты на питание:<span class="result__total-money">15 000 РУБ.</span>
@@ -212,8 +214,8 @@
         </li>
       </ul>
       <div class="sponsor">
-        <a class="sponsor__text" href="https://htmlacademy.ru" aria-label="Сайт HTML Academy">HTML Academy</a>
-        <a class="sponsor__logo" href="https://htmlacademy.ru" aria-label="Сайт HTML Academy">
+        <a class="sponsor__text" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">HTML Academy</a>
+        <a class="sponsor__logo" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
           <svg class="sponsor__svg" width="27" height="34">
             <use xlink:href="img/sprite.svg#icon-sponsor"></use>
           </svg>
